--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/chrome": "^0.0.193",
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^1.0.13",
     "@vitejs/plugin-vue": "^3.0.3",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
