--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon --ignore * --exec yarn vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.{ts,vue}",
@@ -14,6 +14,9 @@
     "@types/chrome": "^0.0.193",
     "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.29.1",
+    "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.16.1",
     "vue": "^3.2.37"
   },
   "devDependencies": {
@@ -24,6 +27,8 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "nodemon": "^2.0.19",
+    "sass": "^1.54.4",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vue-tsc": "^0.39.5"
