--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/chrome": "^0.0.193",
     "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.29.1",
+    "pretty-bytes": "^6.0.0",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primevue": "^3.16.1",
